--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Search logs via REST API",
   "main": "app.js",
-  "engines" : {
-    "node" : ">=18.17.0 <19.0.0"
+  "engines": {
+    "node": ">=18.17.0 <19.0.0"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,13 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.53.0",
     "eslint-config-google": "^0.14.0",
-    "prettier": "3.1.0"
+    "jest": "^29.7.0",
+    "node-mocks-http": "^1.13.0",
+    "prettier": "3.1.0",
+    "ts-jest": "^29.1.1"
   }
 }
